[package]
name = "copy-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
criterion = { version = "0.8.2", features = ["html_reports"] }
flate2 = "1.1.9"
rand = "0.10.1"
snap = { version = "1.1.1", path = "../../tmp/rust/rust-snappy" }
snippy = { version = "0.1.0", path = "../snippy" }
zstd = "0.13.3"

[[bench]]
name = "bench"
harness = false
